<resources>
    <string name="app_name">Charging Animation</string>
    <string name="setup">Setup</string>
    <string name="setup_continue">Continue</string>
    <string name="setup_skip">Skip</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setup_draw_over_other_apps">Display over other apps</string>
    <string name="setup_draw_over_other_apps_summary">This permission is required to show the charging animation.</string>
    <string name="setup_phone_state">Read Phone State</string>
    <string name="setup_phone_state_summary">This permission is required to stop the charging animation for incoming calls.</string>
    <string name="setup_error">Something went wrong! Please try again!</string>

    <string name="charged">%1$d%% Charged</string>
    <string name="charged_percent">%1$d%%</string>
    <string name="animation">Animation</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="remaining">Remaining</string>
    <string name="battery_animation">Battery Animation</string>
    <string name="themes">Themes</string>
    <string name="alarm">Alarm</string>
    <string name="device_info">Device Info</string>
    <string name="battery_info">Battery Info</string>
    <string name="guide">Guide</string>

    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_discharging">Disconnected</string>
    <string name="battery_status_full">Battery full</string>
    <string name="battery_status_unknown">Unknown</string>
    <string name="battery_status_not_charging">not charging</string>
    <string name="battery">Battery</string>
    <string name="battery_health">Battery Health</string>
    <string name="voltage">Voltage</string>
    <string name="temperature">Temperature</string>
    <string name="battery_type">Battery Type</string>
    <string name="battery_information">Battery Information</string>
    <string name="device_information">Device Information</string>
    <string name="brand">Brand</string>
    <string name="device_id">Device ID</string>
    <string name="model">Model</string>
    <string name="sdk">SDK</string>
    <string name="cpu">CPU</string>
    <string name="ram">RAM</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="display">Display</string>
    <string name="view_all">View all</string>
    <string name="abstract_animations">Abstract Animations</string>
    <string name="cartoon_animations">Cartoon Animations</string>
    <string name="heart_animations">Heart Animations</string>
    <string name="charging_animations">Charging Animations</string>
</resources>