<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/purple_500"
    tools:context=".presentation.SetupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:gravity="bottom"
        android:padding="32dp"
        android:text="@string/setup"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp" />

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="?dialogPreferredPadding"
            android:layout_marginTop="?dialogPreferredPadding"
            android:layout_marginEnd="?dialogPreferredPadding"
            android:layout_marginBottom="?dialogPreferredPadding"
            android:background="@null"
            android:text="@string/setup_continue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="?dialogPreferredPadding"
            android:layout_marginTop="?dialogPreferredPadding"
            android:layout_marginEnd="?dialogPreferredPadding"
            android:layout_marginBottom="?dialogPreferredPadding"
            android:background="@null"
            android:text="@string/setup_skip"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>